--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,7 +30,8 @@ dependencies {
     compile 'com.jakewharton:butterknife:8.5.1'
     compile 'com.alibaba:fastjson:1.2.32'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'liji.library.dev:citypickerview:0.7.0'
+    compile 'com.android.support:support-v4:25.3.1'
     testCompile 'junit:junit:4.12'
     apt 'com.jakewharton:butterknife-compiler:8.5.1'
-    compile 'liji.library.dev:citypickerview:0.7.0'
 }
