积分中心附属界面的布局及功能完善，积分商城界面搭建，部分功能实现。

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,8 @@
             android:name=".activity.other.impl.MainActivity"
             android:configChanges="orientation|keyboardHidden|screenSize" />
         <activity android:name=".activity.personcenter.impl.RegisterActivity" />
+
+
         <activity android:name=".activity.personcenter.impl.PersonActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -63,7 +65,8 @@
         <activity android:name=".activity.personcenter.impl.IntegralSequenceActivity" />
         <activity android:name=".activity.personcenter.impl.IntegralTaskActivity" />
         <activity android:name=".activity.personcenter.impl.IntegralUseActivity" />
-        <activity android:name=".activity.personcenter.impl.IntegralParticularsActivity"></activity>
+        <activity android:name=".activity.personcenter.impl.IntegralParticularsActivity" />
+        <activity android:name=".activity.personcenter.impl.IntegralShoppingMallOrderActivity"></activity>
     </application>
 
 </manifest>
