--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,18 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 
+    <!-- baidu map -->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="com.android.launcher.permission.READ_SETTINGS" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.GET_TASKS" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_SETTINGS" />
+
+    <!-- baidu map -->
     <application
         android:name=".application.MyApplication"
         android:allowBackup="true"
@@ -35,8 +47,6 @@
             android:name=".activity.other.impl.MainActivity"
             android:configChanges="orientation|keyboardHidden|screenSize" />
         <activity android:name=".activity.personcenter.impl.RegisterActivity" />
-
-
         <activity android:name=".activity.personcenter.impl.PersonActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -66,7 +76,24 @@
         <activity android:name=".activity.personcenter.impl.IntegralTaskActivity" />
         <activity android:name=".activity.personcenter.impl.IntegralUseActivity" />
         <activity android:name=".activity.personcenter.impl.IntegralParticularsActivity" />
-        <activity android:name=".activity.personcenter.impl.IntegralShoppingMallOrderActivity"></activity>
+        <activity android:name=".activity.personcenter.impl.IntegralShoppingMallOrderActivity" />
+
+        <!-- baidu map -->
+        <meta-data
+            android:name="com.baidu.lbsapi.API_KEY"
+            android:value="DNDf9qVm7Q7l59im5UOy5bbzGfnxrpP8" />
+        <!-- baidu map -->
+        <service
+            android:name="com.baidu.location.f"
+            android:enabled="true"
+            android:process=":remote" >
+            <intent-filter>
+                <action android:name="com.baidu.location.service_v2.2" >
+                </action>
+            </intent-filter>
+        </service>
+
+        <activity android:name=".activity.personcenter.impl.MapSelectAddressActivity"></activity>
     </application>
 
 </manifest>
